syntax = "proto3";

package pb;

import "account.proto";

option go_package = "github.com/bruce-mig/simple-bank/pb";

message ListAccountsRequest {
    int32 page_id = 1;
    int32 page_size = 2;
}

message ListAccountsResponse{
    repeated Account accounts = 1;
}